force-app/main/default/objects/AOP_Factor__c/AOP_Factor__c.object-meta.xml
<CustomObject>
    <label>AOP Factor</label>
    <nameField>
        <label>AOP Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOP Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>