force-app/main/default/objects/AOP_Factor__c/fields/AOP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>AOP_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>AOP External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>