force-app/main/default/objects/AOP_Factor__c/fields/AOP_Mod__c.field-meta.xml
<CustomField>
    <fullName>AOP_Mod__c</fullName>
    <label>AOP Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>