force-app/main/default/objects/AOP_Factor__c/fields/Application_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Application_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Hidden</label>
    <type>Checkbox</type>
</CustomField>