force-app/main/default/objects/AOP_Factor__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>This field pull the data from the &apos;From Date&apos; field on Master Factor record.</description>
    <formula>Master_Factor__r.From_Date__c</formula>
    <label>From Date</label>
    <type>Date</type>
</CustomField>