force-app/main/default/objects/AOP_Factor__c/fields/Law_Area_Category__c.field-meta.xml
<CustomField>
    <fullName>Law_Area_Category__c</fullName>
    <label>Law Area Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>