force-app/main/default/objects/AOP_Factor__c/fields/Next_AOP_Factor__c.field-meta.xml
<CustomField>
    <fullName>Next_AOP_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next AOP Factor</label>
    <referenceTo>AOP_Factor__c</referenceTo>
    <relationshipLabel>AOP Factors</relationshipLabel>
    <relationshipName>AOP_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>