force-app/main/default/objects/AOP_Factor__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>This fields pulls the &apos;To Date&apos; field from the Master Factor record.</description>
    <formula>Master_Factor__r.To_Date__c</formula>
    <label>To Date</label>
    <type>Date</type>
</CustomField>